<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:layout_marginStart="10dp"
	android:layout_marginEnd="10dp"
	android:orientation="vertical"
    tools:context=".fragment.Bantuan">



   <TextView
	   android:layout_marginTop="20dp"
	   android:layout_width="match_parent"
	   android:layout_height="wrap_content"
	   android:text="@string/bantuan2"
	   android:textSize="24sp"
	   android:textStyle="bold"/>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="18sp"
		android:text="@string/bantuan1"
		android:textSize="18sp" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="18sp"
		android:text="@string/bantuan3"
		android:textSize="16sp" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="18sp"
		android:text="@string/bantuan4"
		android:textSize="16sp" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/bantuan5"
		android:textSize="16sp" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/bantuan6"
		android:textSize="16sp" />


</LinearLayout>
