<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:background="@color/putih1"
    tools:context=".ui.DetailTugas">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">
		<com.google.android.material.appbar.AppBarLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
			<androidx.appcompat.widget.Toolbar
				android:id="@+id/toolbar"
				android:layout_width="match_parent"
				android:layout_height="?attr/actionBarSize"
				android:background="@color/button"
				app:layout_scrollFlags="scroll|enterAlways"
				app:title="Detail Tugas"
				app:titleTextColor="@color/white"/>
		</com.google.android.material.appbar.AppBarLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:elevation="10dp"
			android:orientation="vertical"
			android:padding="20dp">
			<ImageView
				android:id="@+id/dtl_img_meet"
				android:layout_width="match_parent"
				android:layout_height="150dp"
				android:contentDescription="@string/cd_dtl_meet"
				android:src="@drawable/meet" />
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="15dp"
				android:text="@string/detail_tugas1"
				android:textColor="@color/black"
				android:textSize="20sp"
				android:textStyle="bold" />

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:orientation="horizontal"
				android:weightSum="2">
				<TextView
					android:id="@+id/dtl_nm_pertemuan"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="1.5"
					android:text="@string/detail_tugas2"
					android:textColor="@color/black"
					android:textSize="15sp" />
				<TextView
					android:id="@+id/dtl_txt_tgl"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_weight="0.5"
					android:text="@string/detail_tugas3"
					android:textColor="@color/black"
					android:textSize="15sp" />
			</LinearLayout>

			<!--  garis pembatas	-->
			<TextView
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:layout_marginTop="10dp"
				android:background="@color/black" />
			<TextView
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_gravity="center_horizontal"
				android:layout_marginStart="20dp"
				android:layout_marginTop="20dp"
				android:layout_marginEnd="20dp"
				android:layout_marginBottom="20dp"
				android:drawablePadding="20dp"
				android:gravity="center_vertical"
				android:text="@string/dtl_tugas"
				android:textColor="@color/black"
				android:textSize="20sp"
				android:textStyle="bold"
				app:drawableStartCompat="@drawable/tugas" />
			<TextView
				android:id="@+id/txt_materi"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/cd_isi"
				android:layout_marginStart="20dp"
				android:layout_marginTop="20dp"
				android:layout_marginEnd="20dp"
				android:layout_marginBottom="20dp"
				android:textSize="18sp"/>

			<!--	START : LAMPIRAN MATERI	-->
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="20dp"
				android:layout_marginEnd="20dp"
				android:orientation="vertical"
				android:background="@drawable/border_materi">
				<TextView
					android:layout_marginStart="10sp"
					android:layout_marginTop="10sp"
					android:layout_marginEnd="10sp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/pertemuan5"
					android:textStyle="bold"
					android:textSize="18sp" />
				<TextView
					android:id="@+id/file_tugas"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginStart="20sp"
					android:layout_marginEnd="20sp"
					android:layout_marginBottom="10sp"
					android:text="@string/pertemuan2"
					android:textColor="#0277BD"
					android:textSize="18sp"
					tools:ignore="TextContrastCheck" />
			</LinearLayout>
			<!--	END : LAMPIRAN MATERI	-->

			<!--	START : LAMPIRAN MATERI	-->
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginStart="20dp"
				android:layout_marginEnd="20dp"
				android:layout_marginTop="20dp"
				android:orientation="vertical"
				android:background="@drawable/border_materi">
				<TextView
					android:layout_marginStart="10sp"
					android:layout_marginTop="10sp"
					android:layout_marginEnd="10sp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/detail_tugas4"
					android:textStyle="bold"
					android:textSize="18sp" />
				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginStart="20sp"
					android:layout_marginEnd="20sp"
					android:layout_marginBottom="10sp"
					android:text="@string/detail_tugas5"
					android:textColor="#0277BD"
					android:textSize="18sp"
					tools:ignore="TextContrastCheck" />
				<Button
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:background="@color/colorPrimaryDark"
					android:text="@string/detail_tugas6"
					android:textColor="@color/white"
					android:layout_gravity="end"
					android:layout_margin="10dp"/>
			</LinearLayout>
			<!--	END : LAMPIRAN MATERI	-->

		</LinearLayout>
	</LinearLayout>

</ScrollView>
