<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/colorPrimary"
	android:orientation="vertical"
	tools:context=".RegisterActivity">

	<androidx.cardview.widget.CardView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_margin="30dp"
		app:cardCornerRadius="15dp">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginTop="40dp"
				android:text="@string/daftar1"
				android:textSize="40sp"
				android:textStyle="bold" />
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginTop="30dp"
				android:text="@string/daftar2"
				android:textColor="@color/colorAccent"
				android:textSize="35sp"
				android:textStyle="italic" />
			<EditText
				android:layout_width="300dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginTop="40dp"
				android:autofillHints="Nama"
				android:background="@drawable/edittextstyle"
				android:hint="@string/daftar3"
				android:inputType="text"
				tools:ignore="TextContrastCheck" />
			<EditText
				android:layout_width="300dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginTop="30dp"
				android:autofillHints="Email"
				android:background="@drawable/edittextstyle"
				android:hint="@string/daftar4"
				android:inputType="textEmailAddress"
				tools:ignore="TextContrastCheck" />
			<EditText
				android:layout_width="300dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginTop="30dp"
				android:autofillHints="Password"
				android:background="@drawable/edittextstyle"
				android:hint="@string/daftar5"
				android:inputType="textPassword"
				tools:ignore="TextContrastCheck" />
			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginTop="30dp"
				android:background="@drawable/buttonstyle"
				android:text="@string/daftar1"
				android:textColor="@color/white"
				tools:ignore="DuplicateSpeakableTextCheck" />
		</LinearLayout>
	</androidx.cardview.widget.CardView>
</LinearLayout>
