<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginTop="5dp"
	android:layout_marginEnd="5dp"
	android:layout_marginStart="10dp"
	app:layout_goneMarginEnd="10dp"
	android:elevation="10dp"
	android:background="@drawable/bg_menu_home">


	<LinearLayout
		android:weightSum="2"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:baselineAligned="false">

		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1.5"
			android:padding="5dp"
			android:orientation="vertical"
			android:layout_marginStart="10sp"
			android:layout_gravity="center"
			>
			<TextView
				android:id="@+id/txt_nama"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/jadwal1"
				android:textSize="14sp"
				android:textColor="@color/black"
				android:textStyle="bold"
				/>
			<TextView
				android:id="@+id/txt_jadwal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/jadwal2"
				android:textSize="12sp"
				android:textStyle="bold"
				/>
			<TextView
				android:id="@+id/txt_kelas"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/jadwal3"
				android:textSize="12sp"
				android:textStyle="bold"
				/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="70dp"
			android:layout_weight="0.5"
			android:layout_gravity="center_horizontal"
			>

			<ImageView
				android:layout_width="60dp"
				android:layout_height="wrap_content"
				android:layout_marginStart="15dp"
				android:padding="5dp"
				android:src="@drawable/jadual"
				android:contentDescription="@string/jadwal4"
				tools:ignore="ImageContrastCheck" />

		</LinearLayout>

	</LinearLayout>

</LinearLayout>
