<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="80dp"
	android:orientation="vertical"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_marginStart="10dp"
	android:layout_marginEnd="10dp"
	app:cardCornerRadius="20dp"
	android:elevation="10dp"
	android:layout_marginBottom="5dp"
	android:layout_marginTop="5dp"
	android:background="@color/white">

	<LinearLayout
		android:weightSum="2"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal">

		<LinearLayout
			android:layout_weight="1.2"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				android:id="@+id/txt_judultugas"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/tugas1"
				android:textSize="14sp"
				android:textColor="@color/black"
				android:textStyle="bold"
				android:layout_marginTop="15dp"
				android:layout_marginStart="16dp"
				android:layout_marginEnd="16dp"/>
			<TextView
				android:id="@+id/txt_mapel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/tugas2"
				android:textSize="12sp"
				android:textStyle="bold"
				android:layout_marginStart="16dp"
				android:layout_marginEnd="16dp"/>
			<TextView
				android:id="@+id/txt_tgl"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/tugas3"
				android:textSize="12sp"
				android:textStyle="bold"
				android:layout_marginStart="16dp"
				android:layout_marginEnd="16dp"/>
		</LinearLayout>

		<ImageView
			android:id="@+id/meet"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="0.8"
			android:contentDescription="@string/tugas4"
			android:padding="5dp"
			android:src="@drawable/listtask"
			tools:ignore="ImageContrastCheck" />

	</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
