<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
	android:background="@color/colorPrimary"
	tools:context=".LoginActivity">

	<androidx.cardview.widget.CardView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_margin="30dp"
		app:cardCornerRadius="15dp">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="40dp"
				android:text="@string/login1"
				android:textSize="40sp"
				android:textStyle="bold"
				android:layout_gravity="center_horizontal"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="30dp"
				android:text="@string/login2"
				android:textSize="35sp"
				android:textStyle="italic"
				android:layout_gravity="center_horizontal"
				android:textColor="@color/colorAccent"/>

			<EditText
				android:id="@+id/ed_email"
				android:layout_width="300dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginTop="60dp"
				android:autofillHints="Username"
				android:background="@drawable/edittextstyle"
				android:hint="@string/login3"
				android:inputType="textEmailAddress"
				tools:ignore="TextContrastCheck" />

			<EditText
				android:id="@+id/ed_password"
				android:layout_width="300dp"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginTop="40dp"
				android:autofillHints="Password"
				android:background="@drawable/edittextstyle"
				android:hint="@string/login4"
				android:inputType="textPassword"
				tools:ignore="TextContrastCheck" />

			<Button
				android:id="@+id/tbl_login"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_marginTop="40dp"
				android:background="@drawable/buttonstyle"
				android:text="@string/login1"
				android:textColor="@color/white"
				tools:ignore="DuplicateSpeakableTextCheck" />
		</LinearLayout>
	</androidx.cardview.widget.CardView>

</LinearLayout>
